[fix] no more scrollbars in firefox (probably a box-sizing issue)

--- a/style.css
+++ b/style.css
@@ -1,10 +1,20 @@
 /*-------------------------
 	Simple reset
 --------------------------*/
-*{
+*, *:before, *:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+	padding: 0;
+
+ }
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box !important;
+	-moz-box-sizing: border-box !important;
 }
+
 /*-------------------------
 	General Styles
 --------------------------*/
@@ -43,8 +53,8 @@ header h1{
 -----------------------------*/
 
 html, body {
-  height: 100%;
-  width: 100%;
+  height: 100% !important;
+  width: 100% !important;
   overflow: none;
 }
 #weather {
@@ -52,10 +62,9 @@ html, body {
   width: 100%;
 }
 .slide {
-  padding: 100px 0 0;
+  padding: 100px 0 0 0;
   height: 100%;
   width: 100%;
-  box-sizing: border-box;
 }
 .slide > * {
   width: 80% !important;
@@ -128,6 +137,10 @@ footer > * {
   position: absolute;
   bottom: 0;
 }
+
+
+/*#####################################################*/
+/*#####################################################*/
 
 @media screen and (max-width: 1100px) {
 .huge {
